Fix z index values for the blurred menu and menu

--- a/style.css
+++ b/style.css
@@ -38,8 +38,9 @@ a{
     padding: 0px 240px;
     max-width: 100%;
     height: 58px;
-    box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.28) ;
+    box-shadow: 0px 10px 10px 0px rgba(219, 219, 219, 0.28) ;
     z-index: 999;
+    position: relative;
 }
 .left-menu, .right-menu{
     display: flex;
@@ -326,6 +327,7 @@ a{
     align-items: center;
     position: sticky;
     top:0;
+    z-index: 100;
 
 }
 .right-blurred-menu{
@@ -363,3 +365,4 @@ a{
 
 
 /* HERO SECTION */
+
